# Team0

./: .gitignore  Readme.md  installPCL.sh
CameraLidarFusion/: compile_main_program.sh  expand_usb_core_mem.sh  main.cpp  main.py
CameraLidarFusion/constants/: constants.py
CameraLidarFusion/utils/: camera_utils.py  visualization_utils.py
ConcurrentObjectDetection/: main.py
PretrainedKittiObjectDetectionExample/: main.py
PretrainedObjectDetectionExample/: main.py
VelodyneReader/Tests/InitialTest/: InitialTest.pro  main.cpp
VelodyneReader/Tests/PCLVLPGrabberExample/: CMakeLists.txt  main.cpp
VelodyneReader/Tests/build-InitialTest-Desktop_Qt_5_11_2_clang_64bit-Debug/: InitialTest  Makefile  moc_predefs.h  moc_velodynesocketwrapper.cpp  moc_velodyneudpsocket.cpp
VelodyneReader/src/Helpers/: randomdev.h  singleton.h
VelodyneReader/src/Velodyne/: velodynedecodedpacket.h  velodynepacket.h  velodynesocketwrapper.h  velodyneudpsocket.cpp  velodyneudpsocket.h
VideoObjectDetection/: main.py
