cmake_minimum_required(VERSION 3.5)
project(untitled)

set(CMAKE_CXX_STANDARD 11)
find_package(PCL 1.8 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS} ${PCAP_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(untitled main.cpp)
target_link_libraries(untitled ${PCL_LIBRARIES})
